--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
  .Photography-content {
   display: none;
   position: absolute;
-  background: rgba(255, 164, 54, 0.988)!important;
+  background: rgb(60, 26, 170)!important;
   width: 260px;
   z-index: 1;
         }
 
         .Photography-content a {
             float: none;
-            color: darkblue;
+            color: rgb(233, 233, 2);
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -146,8 +146,8 @@
         }
 
         .Photography-content a:hover {
-            background: rgba(255, 195, 84, 0.988)!important;
-            color: #000;
+            background: #fff;
+            color: rgb(255, 60, 0);
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
@@ -184,14 +184,14 @@
         .Sport-content {
             display: none;
   position: absolute;
-  background: rgba(255, 164, 54, 0.988)!important;
+  background: rgb(60, 26, 170)!important;
   width: 219px;
   z-index: 1;
         }
 
         .Sport-content a {
             float: none;
-            color: darkblue;
+            color: rgb(233, 233, 2);
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -199,8 +199,8 @@
         }
 
         .Sport-content a:hover {
-            background: rgba(255, 195, 84, 0.988)!important;
-            color: #000;
+            background: #fff;
+            color: rgb(255, 60, 0);
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
@@ -236,14 +236,14 @@
         .Education-content {
             display: none;
   position: absolute;
-  background: rgba(255, 164, 54, 0.988)!important;
+  background: rgb(60, 26, 170)!important;
   width: 260px;
   z-index: 1;
         }
 
         .Education-content a {
             float: none;
-            color: darkblue;
+            color: rgb(233, 233, 2);
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -251,8 +251,8 @@
         }
 
         .Education-content a:hover {
-            background: rgba(255, 195, 84, 0.988)!important;
-            color: #000;
+            background: #fff;
+            color: rgb(255, 60, 0);
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
@@ -288,15 +288,14 @@
         .Daily-content {
             display: none;
   position: absolute;
-  background: rgba(255, 164, 54, 0.988)!important;
+  background: rgb(60, 26, 170)!important;
   width: 260px;
   z-index: 1;
-  box-shadow: -0.1px 2px 0.55rem -0.1px #8686867a;
         }
 
         .Daily-content a {
             float: none;
-            color: darkblue;
+            color: rgb(233, 233, 2);
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -304,8 +303,8 @@
         }
 
         .Daily-content a:hover {
-            background: rgba(255, 195, 84, 0.988)!important;
-            color: #000;
+            background: #fff;
+            color: rgb(255, 60, 0);
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
@@ -341,15 +340,14 @@
         .Photos-content {
             display: none;
   position: absolute;
-  background: rgba(255, 164, 54, 0.988)!important;
+  background: rgb(60, 26, 170)!important;
   width: 260px;
   z-index: 1;
-  box-shadow: -0.1px 2px 0.55rem -0.1px #8686867a;
         }
 
         .Photos-content a {
             float: none;
-            color: darkblue;
+            color: rgb(233, 233, 2);
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -357,8 +355,8 @@
         }
 
         .Photos-content a:hover {
-            background: rgba(255, 195, 84, 0.988)!important;
-            color: #000;
+            background: #fff;
+            color: rgb(255, 60, 0);
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
@@ -394,15 +392,14 @@
         .Community-content {
   display: none;
   position: absolute;
-  background: rgba(255, 164, 54, 0.988)!important;
+  background: rgb(60, 26, 170)!important;
   width: 260px;
   z-index: 1;
-  box-shadow: -0.1px 2px 0.55rem -0.1px #8686867a;
         }
 
         .Community-content a {
             float: none;
-            color: darkblue;
+            color: rgb(233, 233, 2);
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -410,8 +407,8 @@
         }
 
         .Community-content a:hover {
-            background: rgba(255, 195, 84, 0.988)!important;
-            color: #000;
+            background: #fff;
+            color: rgb(255, 60, 0);
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
@@ -464,7 +461,7 @@
 
         .TikiYiki-content a:hover {
             background: #fff;
-            color: rgb(255, 38, 0);
+            color: rgb(255, 60, 0);
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
@@ -500,14 +497,14 @@
         .Disability-content {
             display: none;
   position: absolute;
-  background: rgba(255, 164, 54, 0.988)!important;
+  background: rgb(60, 26, 170)!important;
   width: 260px;
   z-index: 1;
         }
 
         .Disability-content a {
             float: none;
-            color: darkblue;
+            color: rgb(233, 233, 2);
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -515,8 +512,8 @@
         }
 
         .Disability-content a:hover {
-            background: rgba(255, 195, 84, 0.988)!important;
-            color: #000;
+            background: #fff;
+            color: rgb(255, 60, 0);
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
