--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         }
         
         .navbar {
-            background: #262626fb;
+            background: #353535fb;
             height: 57px;
             object-fit: cover;
             z-index: 1;
@@ -134,6 +134,7 @@
   background: rgb(60, 26, 170)!important;
   width: 260px;
   z-index: 1;
+border-bottom: 0.11rem solid transparent;
         }
 
         .Photography-content a {
@@ -151,7 +152,8 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 35px;
+            line-height: 34px;
+            border-bottom: 0.11rem solid rgb(60, 26, 170);
         }
 
         .Photography:hover .Photography-content {
@@ -187,6 +189,7 @@
   background: rgb(60, 26, 170)!important;
   width: 219px;
   z-index: 1;
+  border-bottom: 0.11rem solid transparent;
         }
 
         .Sport-content a {
@@ -204,7 +207,8 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 35px;
+            line-height: 34px;
+            border-bottom: 0.11rem solid rgb(60, 26, 170);
         }
 
         .Sport:hover .Sport-content {
@@ -239,6 +243,7 @@
   background: rgb(60, 26, 170)!important;
   width: 260px;
   z-index: 1;
+  border-bottom: 0.11rem solid transparent;
         }
 
         .Education-content a {
@@ -256,7 +261,8 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 35px;
+            line-height: 34px;
+            border-bottom: 0.11rem solid rgb(60, 26, 170);
         }
 
         .Education:hover .Education-content {
@@ -291,6 +297,7 @@
   background: rgb(60, 26, 170)!important;
   width: 260px;
   z-index: 1;
+  border-bottom: 0.11rem solid transparent;
         }
 
         .Daily-content a {
@@ -308,7 +315,8 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 35px;
+            line-height: 34px;
+            border-bottom: 0.11rem solid rgb(60, 26, 170);
         }
 
         .Daily:hover .Daily-content {
@@ -343,6 +351,7 @@
   background: rgb(60, 26, 170)!important;
   width: 260px;
   z-index: 1;
+  border-bottom: 0.11rem solid transparent;
         }
 
         .Photos-content a {
@@ -360,7 +369,8 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 35px;
+            line-height: 34px;
+            border-bottom: 0.11rem solid rgb(60, 26, 170);
         }
 
         .Photos:hover .Photos-content {
@@ -395,6 +405,7 @@
   background: rgb(60, 26, 170)!important;
   width: 260px;
   z-index: 1;
+  border-bottom: 0.11rem solid transparent;
         }
 
         .Community-content a {
@@ -412,7 +423,8 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 35px;
+            line-height: 34px;
+            border-bottom: 0.11rem solid rgb(60, 26, 170);
         }
 
         .Community:hover .Community-content {
@@ -448,6 +460,7 @@
   width: 260px;
   z-index: 1;
   margin-left: 45px;
+  border-bottom: 0.11rem solid transparent;
         }
 
         .TikiYiki-content a {
@@ -465,7 +478,8 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 35px;
+            line-height: 34px;
+            border-bottom: 0.11rem solid rgb(60, 26, 170);
         }
 
         .TikiYiki:hover .TikiYiki-content {
@@ -500,6 +514,7 @@
   background: rgb(60, 26, 170)!important;
   width: 260px;
   z-index: 1;
+  border-bottom: 0.11rem solid transparent;
         }
 
         .Disability-content a {
@@ -517,7 +532,8 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 35px;
+            line-height: 34px;
+            border-bottom: 0.11rem solid rgb(60, 26, 170);
         }
 
         .Disability:hover .Disability-content {
