--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         
         .navbar {
             background: #353535fb;
-            height: 57px;
+            height: 58px;
             object-fit: cover;
             z-index: 1;
             top: 0;
@@ -94,8 +94,8 @@
             width: 95px;
             height: 45px;
             border: 2px solid #000!important;
-            margin-left: 20.5px;
-            border-radius: 0.3rem;
+            
+            border-radius: 0.2rem;
         }
 
         .navbar img:hover {
@@ -152,8 +152,11 @@ border-bottom: 0.11rem solid transparent;
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 34px;
-            border-bottom: 0.11rem solid rgb(60, 26, 170);
+            line-height: 33px;
+            border-top: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-bottom: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-left: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-right: 0.25px solid rgba(60, 26, 170, 0.375);
         }
 
         .Photography:hover .Photography-content {
@@ -207,8 +210,11 @@ border-bottom: 0.11rem solid transparent;
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 34px;
-            border-bottom: 0.11rem solid rgb(60, 26, 170);
+            line-height: 33px;
+            border-top: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-bottom: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-left: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-right: 0.25px solid rgba(60, 26, 170, 0.375);
         }
 
         .Sport:hover .Sport-content {
@@ -261,8 +267,11 @@ border-bottom: 0.11rem solid transparent;
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 34px;
-            border-bottom: 0.11rem solid rgb(60, 26, 170);
+            line-height: 33px;
+            border-top: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-bottom: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-left: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-right: 0.25px solid rgba(60, 26, 170, 0.375);
         }
 
         .Education:hover .Education-content {
@@ -315,8 +324,11 @@ border-bottom: 0.11rem solid transparent;
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 34px;
-            border-bottom: 0.11rem solid rgb(60, 26, 170);
+            line-height: 33px;
+            border-top: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-bottom: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-left: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-right: 0.25px solid rgba(60, 26, 170, 0.375);
         }
 
         .Daily:hover .Daily-content {
@@ -369,8 +381,11 @@ border-bottom: 0.11rem solid transparent;
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 34px;
-            border-bottom: 0.11rem solid rgb(60, 26, 170);
+            line-height: 33px;
+            border-top: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-bottom: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-left: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-right: 0.25px solid rgba(60, 26, 170, 0.375);
         }
 
         .Photos:hover .Photos-content {
@@ -423,8 +438,11 @@ border-bottom: 0.11rem solid transparent;
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 34px;
-            border-bottom: 0.11rem solid rgb(60, 26, 170);
+            line-height: 33px;
+            border-top: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-bottom: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-left: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-right: 0.25px solid rgba(60, 26, 170, 0.375);
         }
 
         .Community:hover .Community-content {
@@ -460,7 +478,7 @@ border-bottom: 0.11rem solid transparent;
   width: 260px;
   z-index: 1;
   margin-left: 45px;
-  border-bottom: 0.11rem solid transparent;
+  border-bottom: 0.25px solid transparent;
         }
 
         .TikiYiki-content a {
@@ -478,8 +496,11 @@ border-bottom: 0.11rem solid transparent;
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 34px;
-            border-bottom: 0.11rem solid rgb(60, 26, 170);
+            line-height: 33px;
+            border-top: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-bottom: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-left: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-right: 0.25px solid rgba(60, 26, 170, 0.375);
         }
 
         .TikiYiki:hover .TikiYiki-content {
@@ -532,8 +553,11 @@ border-bottom: 0.11rem solid transparent;
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
-            line-height: 34px;
-            border-bottom: 0.11rem solid rgb(60, 26, 170);
+            line-height: 33px;
+            border-top: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-bottom: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-left: 0.25px solid rgba(60, 26, 170, 0.375);
+            border-right: 0.25px solid rgba(60, 26, 170, 0.375);
         }
 
         .Disability:hover .Disability-content {
