--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         }
         
         .navbar {
-            background: #353535fb;
+            background: darkblue;
             height: 58px;
             object-fit: cover;
             z-index: 1;
@@ -94,8 +94,7 @@
             width: 95px;
             height: 45px;
             border: 2px solid #000!important;
-            
-            border-radius: 0.2rem;
+            border-radius: 0.4rem;
         }
 
         .navbar img:hover {
