--- a/index.html
+++ b/index.html
@@ -1567,7 +1567,7 @@ border-bottom: 0.11rem solid transparent;
             justify-content: center;
             justify-items: center;
             background: transparent;
-            text-align: center;
+            text-align: left;
             height: 260px;
             font-family: arial;
             font-size: 18px;
@@ -3413,7 +3413,7 @@ function showSlides(n) {
 
                 <a href="file:///C:/Users/User/Documents/Health-Care.html" target="_blank">
                     <div class="k-imagek3">
-                        <p style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;padding: 5px; text-align: left;">
+                        <p style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;padding: 5px;">
                             <b>Health Care Is A Common Human Right Worldwide. But In Some Regions People Simply Die Of Malaria.</b> </p>
                         <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;"><b>Health Care</b> as a right for
                             everyone is not the reality everywhere. Especially in some African countries people suffer
