--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         }
         
         .navbar {
-            background: darkblue;
+            background: rgb(0, 0, 118);
             height: 58px;
             object-fit: cover;
             z-index: 1;
@@ -130,7 +130,7 @@
  .Photography-content {
   display: none;
   position: absolute;
-  background: rgb(32, 74, 189)!important;
+  background: rgb(43, 67, 200)!important;
   width: 260px;
   z-index: 1;
 border-bottom: 0.11rem solid transparent;
@@ -138,7 +138,7 @@ border-bottom: 0.11rem solid transparent;
 
         .Photography-content a {
             float: none;
-            color: rgb(233, 233, 2);
+            color: yellow;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -188,7 +188,7 @@ border-bottom: 0.11rem solid transparent;
         .Sport-content {
             display: none;
   position: absolute;
-  background: rgb(32, 74, 189)!important;
+  background: rgb(43, 67, 200)!important;
   width: 219px;
   z-index: 1;
   border-bottom: 0.11rem solid transparent;
@@ -196,7 +196,7 @@ border-bottom: 0.11rem solid transparent;
 
         .Sport-content a {
             float: none;
-            color: rgb(233, 233, 2);
+            color: yellow;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -245,7 +245,7 @@ border-bottom: 0.11rem solid transparent;
         .Education-content {
             display: none;
   position: absolute;
-  background: rgb(32, 74, 189)!important;
+  background: rgb(43, 67, 200)!important;
   width: 260px;
   z-index: 1;
   border-bottom: 0.11rem solid transparent;
@@ -253,7 +253,7 @@ border-bottom: 0.11rem solid transparent;
 
         .Education-content a {
             float: none;
-            color: rgb(233, 233, 2);
+            color: yellow;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -302,7 +302,7 @@ border-bottom: 0.11rem solid transparent;
         .Daily-content {
             display: none;
   position: absolute;
-  background: rgb(32, 74, 189)!important;
+  background: rgb(43, 67, 200)!important;
   width: 260px;
   z-index: 1;
   border-bottom: 0.11rem solid transparent;
@@ -310,7 +310,7 @@ border-bottom: 0.11rem solid transparent;
 
         .Daily-content a {
             float: none;
-            color: rgb(233, 233, 2);
+            color: yellow;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -359,7 +359,7 @@ border-bottom: 0.11rem solid transparent;
         .Photos-content {
             display: none;
   position: absolute;
-  background: rgb(32, 74, 189)!important;
+  background: rgb(43, 67, 200)!important;
   width: 260px;
   z-index: 1;
   border-bottom: 0.11rem solid transparent;
@@ -367,7 +367,7 @@ border-bottom: 0.11rem solid transparent;
 
         .Photos-content a {
             float: none;
-            color: rgb(233, 233, 2);
+            color: yellow;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -473,7 +473,7 @@ border-bottom: 0.11rem solid transparent;
         .TikiYiki-content {
   display: none;
   position: absolute;
-  background: rgb(32, 74, 189)!important;
+  background: rgb(43, 67, 200)!important;
   width: 260px;
   z-index: 1;
   margin-left: 45px;
@@ -482,7 +482,7 @@ border-bottom: 0.11rem solid transparent;
 
         .TikiYiki-content a {
             float: none;
-            color: rgb(233, 233, 2);
+            color: yellow;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -531,7 +531,7 @@ border-bottom: 0.11rem solid transparent;
         .Disability-content {
             display: none;
   position: absolute;
-  background: rgb(32, 74, 189)!important;
+  background: rgb(43, 67, 200)!important;
   width: 260px;
   z-index: 1;
   border-bottom: 0.11rem solid transparent;
@@ -539,7 +539,7 @@ border-bottom: 0.11rem solid transparent;
 
         .Disability-content a {
             float: none;
-            color: rgb(233, 233, 2);
+            color: yellow;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
