--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
         .Community-content a {
             float: none;
-            color: rgb(233, 233, 2);
+            color: yellow ;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
