--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="disability,education,storytelling,culture,learnings,children,kid-education,disabled-kids-education-in-burkina-faso,each-other,burkina-faso,africa,conversations-for-a-better-understanding-of-disability,inclusive-education,building-a-social-harmony-with-education,disabilities">
-    <meta name="keywords" content="disability,education,storytelling,culture,learnings,children,kid-education,disabled-kids-education-in-burkina-faso,each-other,burkina-faso,africa,conversations-for-a-better-understanding-of-disability,inclusive-education,building-a-social-harmony-with-education,disabilities">    
+    <meta name="keywords" content="disability,education,culture,learnings,children,kid-education,disabled-kids-education-in-burkina-faso,each-other,burkina-faso,africa,conversations-for-a-better-understanding-of-disability,inclusive-education,building-a-social-harmony-with-education,disabilities">    
     <meta name="twitter:card" content="summary">
-    <meta property="og:site_name" content="tikinyiki,tiki-'-yiki">
+    <meta property="og:site_name" content="tikinyiki,tiki-n-'-yiki,tikiyiki">
     <meta property="og:title" content="tikiyiki">
     <meta property="og:type" content="website">
     <meta property="og:url" content="#">
@@ -67,7 +67,7 @@
         }
         
         .navbar {
-            background: rgb(0, 0, 123);
+            background: rgb(0, 0, 129);
             height: 58px;
             object-fit: cover;
             z-index: 1;
@@ -130,7 +130,7 @@
  .Photography-content {
   display: none;
   position: absolute;
-  background: rgb(59, 83, 219)!important;
+  background: rgb(58, 132, 242);
   width: 260px;
   z-index: 1;
   border-bottom: 0.11rem solid transparent;
@@ -188,7 +188,7 @@
         .Sport-content {
             display: none;
   position: absolute;
-  background: rgb(59, 83, 219)!important;
+  background: rgb(58, 132, 242);
   width: 219px;
   z-index: 1;
   border-bottom: 0.11rem solid transparent;
@@ -245,7 +245,7 @@
         .Education-content {
             display: none;
   position: absolute;
-  background: rgb(59, 83, 219)!important;
+  background: rgb(58, 132, 242);
   width: 260px;
   z-index: 1;
   border-bottom: 0.11rem solid transparent;
@@ -302,7 +302,7 @@
         .Daily-content {
             display: none;
   position: absolute;
-  background: rgb(59, 83, 219)!important;
+  background: rgb(58, 132, 242);
   width: 260px;
   z-index: 1;
   border-bottom: 0.11rem solid transparent;
@@ -359,7 +359,7 @@
         .Photos-content {
             display: none;
   position: absolute;
-  background: rgb(59, 83, 219)!important;
+  background: rgb(58, 132, 242);
   width: 260px;
   z-index: 1;
   border-bottom: 0.11rem solid transparent;
@@ -416,7 +416,7 @@
         .Community-content {
   display: none;
   position: absolute;
-  background: rgb(59, 83, 219)!important;
+  background: rgb(58, 132, 242);
   width: 260px;
   z-index: 1;
   border-bottom: 0.11rem solid transparent;
@@ -473,7 +473,7 @@
         .TikiYiki-content {
   display: none;
   position: absolute;
-  background: rgb(59, 83, 219)!important;
+  background: rgb(58, 132, 242);
   width: 260px;
   z-index: 1;
   margin-left: 45px;
@@ -531,7 +531,7 @@
         .Disability-content {
             display: none;
   position: absolute;
-  background: rgb(59, 83, 219)!important;
+  background: rgb(58, 132, 242);
   width: 260px;
   z-index: 1;
   border-bottom: 0.11rem solid transparent;
@@ -686,7 +686,7 @@
             color: #000;
             background: rgba(9, 9, 9, 0.798);
             font-family: 'Barlow Condensed', sans-serif;
-            font-size: 1.45rem;
+            font-size: 1.3rem;
             animation: mymove0 55s ease-in infinite;
             animation-direction: alternate;
             cursor: pointer;
@@ -1146,7 +1146,7 @@
             justify-content: center;
             align-items: center;
             text-align: left;
-            background-color: #fdfdfdd1;
+            background-color: #fdfdfde5;
             padding-top: 20px;
             padding-bottom: 20px;
             margin-top: 5%;
@@ -1401,7 +1401,7 @@
             column-gap: 10px;
             justify-content: space-around;
             justify-items: center;
-            background-color: #fdfdfdd1;
+            background-color: #fdfdfde5;
             width: 84%;
             height: 285px;
             font-family: 'georgia';
@@ -1466,7 +1466,7 @@
             column-gap: 10px;
             justify-content: space-around;
             justify-items: center;
-            background-color: #fdfdfdd1;
+            background-color: #fdfdfde5;
             width: 84%;
             height: 297px;
             font-family: 'georgia';
@@ -1532,7 +1532,7 @@
             column-gap: 10px;
             justify-content: space-around;
             justify-items: center;
-            background-color: #fdfdfdd1;
+            background-color: #fdfdfde5;
             width: 84%;
             height: 286px;
             font-family: 'georgia';
@@ -1597,7 +1597,7 @@
             justify-items: center;
             width: 84%;
             height: 290px;
-            background-color: #fdfdfdd1;
+            background-color: #fdfdfde5;
             font-family: 'georgia';
             color: rgb(82, 82, 82);
             font-size: 22px;
@@ -1658,7 +1658,7 @@
             column-gap: 10px;
             justify-content: space-around;
             justify-items: center;
-            background-color: #fdfdfdd1;
+            background-color: #fdfdfde5;
             width: 84%;
             height: 300px;
             font-family: 'georgia';
@@ -1721,7 +1721,7 @@
             column-gap: 10px;
             justify-content: space-around;
             justify-items: center;
-            background-color: #fdfdfdd1;
+            background-color: #fdfdfde5;
             width: 84%;
             height: 298px;
             font-family: 'georgia';
@@ -1784,7 +1784,7 @@
             column-gap: 10px;
             justify-content: space-around;
             justify-items: center;
-            background-color: #fdfdfdd1;
+            background-color: #fdfdfde5;
             width: 84%;
             height: 295px;
             font-family: 'georgia';
@@ -1847,7 +1847,7 @@
             row-gap: 5px;
             justify-content: center;
             justify-items: center;
-            background-color: #fdfdfdd1;
+            background-color: #fdfdfde5;
             width: 84%;
             height: 250px;
             font-family: 'georgia';
@@ -1937,7 +1937,7 @@
             column-gap: 2px;
             justify-content: space-around;
             justify-items: center;
-            background-color: #fdfdfdd1;
+            background-color: #fdfdfde5;
             width: 84%;
             height: 630px;
             font-family: 'georgia';
@@ -2186,7 +2186,7 @@
             column-gap: 5px;
             justify-content: space-between;
             justify-items: center;
-            background-color: #fdfdfdd1;
+            background-color: #fdfdfde5;
             width: 84%;
             height: 600px;
             font-family: 'georgia';
@@ -2235,7 +2235,7 @@
             column-gap: 65px;
             justify-content: space-between;
             justify-items: center;
-            background-color: #fdfdfdd1;
+            background-color: #fdfdfde5;
             width: 84%;
             height: 600px;
             font-family: 'georgia';
@@ -2355,7 +2355,7 @@
             column-gap: 2px;
             justify-content: center;
             justify-items: center;
-            background-color: #fdfdfd6e;
+            background-color: #fdfdfde5;
             width: 84%;
             height: 410px;
             padding-top: 5px;
@@ -2943,21 +2943,24 @@ background: #717171;
             justify-content: center;
             align-items: center;
             background: #fff!important;
-            color: #000;
+            color: blue;
             width: 150px;
             height: 30px;
-            font-family: 'arial';
             font-family: 'Barlow Condensed', sans-serif;
-            font-size: 16px;
+            font-size: 12.25px;
             padding-top: 20px;
             padding-bottom: 5px;
             margin-top: 10px;
             cursor: pointer;
+            border: 0.1px solid transparent;
         }
 
         .datime:hover {
-            background: rgb(4, 171, 4)!important;
-            color: rgb(255, 251, 1);
+            background: rgb(7, 152, 7)!important;
+            color: yellow;
+            font-size: 12.25px;
+            border: 0.1px solid #fff;
+            transition: 0.26s linear;
         }
 
         .reader {
@@ -3246,9 +3249,9 @@ function showSlides(n) {
             
             <div class="Sport-content">
                 <a href="https://www.nhl.com" target="blank">NHL-America</a>
+                <a href="#" target="blank">COPA America</a>
                 <a href="https://www.cafonline.com" target="blank">CAF-Africa</a>
                 <a href="https://www.uefa.com/" target="blank">UEFA-Europe</a>
-                <a href="#" target="blank">COPA America</a>
             </div>
 
         </div>
@@ -3377,15 +3380,12 @@ function showSlides(n) {
                     <div class="k-image2">
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 21px; padding: 5px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
-                            <b> "Inclusiveness" May Be Ordinary Or New To You. But Inclusiveness As Word Never Been
-                                Strange To The Dictionary.
-                                That Means Words Have Been With Us Since The Creation. It Belongs To Human-Beings To Put Them
-                                Into Life By Practices. That's Why Inclusive
-                                Education Matters Because It's Not A
-                                Privilege But A Right For (Disabled Ones) Kids With Difference.</b> </p>
+                            <b> "Inclusiveness" May Be Ordinary Or New To You. But Inclusiveness Is Worded In The Dictionary
+                                And Existed Since Its Creation. It Belongs To Human-Beings To Put It Into Practical Life. That's Why Inclusiveness in
+                                Education Also Matters. It's Not A Privilege But A Right For Every Kid Including Those Who Are Disabled And/Or Different.</b> </p>
 
                         <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;"><b>Inclusive Education</b> has no
-                            room everywhere. It should not be like a privilege but an intrinseque right.</p>
+                            room everywhere. It should not be a privilege but an intrinseque right.</p>
                     </div>
                 </a>
 
@@ -3395,8 +3395,7 @@ function showSlides(n) {
                             <img src="https://zupimages.net/up/22/21/3bad.jpg" alt="Teaching kids" />
                             <figcation
                                 style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: center; color: rgb(126, 126, 126)">
-                                Supporting Preschool Kids in
-                                Burkina Faso</figcation>
+                                Supporting Preschool Kids in Burkina Faso</figcation>
                         </figure>
                     </div>
                 </a>
@@ -3408,10 +3407,8 @@ function showSlides(n) {
                 <a href="file:///C:/Users/User/Documents/Health-Care.html" target="_blank">
                     <div class="k-imagek3">
                         <p style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;padding: 5px;">
-                            <b>Health Care Is A Common Human Right Worldwide. But In Some Regions People Simply Die Of Malaria.</b> </p>
-                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;"><b>Health Care</b> as a right for
-                            everyone is not the reality everywhere. Especially in some African countries people suffer
-                            and die of simple diseases that can be avoided.</p>
+                            <b>Health Care Is A Human Right Worldwide. But In Some Regions Around The World, People Are Dying Because Simply Of Malaria.</b> </p>
+                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;"><b>Health Care</b> is a human basic right worldwide. But not everyone has it everywhere. In Africa some people are dying from diseases that can be avoided. It should'nt.</p>
                     </div>
                 </a>
 
@@ -3831,7 +3828,7 @@ function showSlides(n) {
 
                                     <span
                                         style="background-color: transparent; font-family: 'verdana'; color: #000; text-align: left; margin-left: 1px;"><b>THE
-                                            BEAUTIFUL PROVINCE</b></span>
+                                             PROVINCE OF QUEBEC</b></span>
                                     <a href="https://www.thecanadianencyclopedia.ca/en/article/aboriginal-people"
                                         target="blank">
                                         <li>Indigenious Before Europeans </li>
