--- a/index.html
+++ b/index.html
@@ -3443,7 +3443,7 @@ function showSlides(n) {
                                 Education Also Matters. It's Not A Privilege But A Right For Every Kid Including Those Who Are Disabled And/Or Different.</b> </p>
 
                         <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;"><b>Inclusive Education</b> has no
-                            room everywhere. It should not be a privilege but an intrinseque right.</p>
+                            room everywhere. It should not be a privilege but an intrinsic right.</p>
                     </div>
                 </a>
 
