--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         }
         
         .navbar {
-            background: rgb(0, 0, 129);
+            background: rgb(3, 3, 105);
             height: 56.48px;
             object-fit: cover;
             z-index: 1;
@@ -99,6 +99,7 @@
 
         .navbar img:hover {
             transform: scale(1.1);
+            box-shadow: 0 -1px 0.5rem 0.1px rgba(159, 159, 159, 0.961);
         }
 
         .content {
@@ -1429,6 +1430,7 @@
         .content1 a:hover {
             box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
             transition: 0.25s linear;
+            background-color: #f3f3f3fc;
         }
 
         .k-image1 {
@@ -1493,6 +1495,7 @@
         .content2 a:hover {
             box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
             transition: 0.25s linear;
+            background-color: #f3f3f3fc;
         }
 
         .k-image3 {
@@ -1558,6 +1561,7 @@
         .content3 a:hover {
             box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
             transition: 0.25s linear;
+            background-color: #f3f3f3fc;
         }
 
         .k-imagek3 {
@@ -1621,6 +1625,7 @@
         .content4 a:hover {
             box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
             transition: 0.25s linear;
+            background-color: #f3f3f3fc;
         }
 
         .k-imagek4 {
@@ -1684,6 +1689,7 @@
         .content5 a:hover {
             box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
             transition: 0.25s linear;
+            background-color: #f3f3f3fc;
         }
 
         .k-imagek5 {
@@ -1747,6 +1753,7 @@
         .content6 a:hover {
             box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
             transition: 0.25s linear;
+            background-color: #f3f3f3fc;
         }
 
         .k-imagek6 {
@@ -1810,6 +1817,7 @@
         .content7 a:hover {
             box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
             transition: 0.25s linear;
+            background-color: #f3f3f3fc;
         }
 
         .k-imagek7 {
@@ -2234,6 +2242,7 @@
             box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
             transition: 0.25s linear;
             padding: 5px;
+            background-color: #f9f8f8;
         }
 
         .contenty {
@@ -3296,7 +3305,7 @@ function showSlides(n) {
 
             <div>
                 <a href="https://www.nhl.com" target="blank">NHL-America</a>
-                <a href="#" target="blank">COPA America</a>
+                <a href="https://copaamerica.com/en/" target="blank">COPA America</a>
             </div>
         <div>
                 <a href="https://www.cafonline.com" target="blank">CAF-Africa</a>
