--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             grid-template-columns: 0.5fr 0.5fr;
             justify-content: center;
             justify-items: center;
-            width: 32%;
+            width: 38%;
         }
 
         .TikiYiki {
@@ -3208,14 +3208,17 @@ function showSlides(n) {
             <div class="Community-content">
 
             <div>
-                <a href="https://www.playgeography.com/games/countries-of-africa/" target="blank">Play Africa
-                    Geography</a>
+                <a href="https://www.playgeography.com/games/countries-of-africa/" target="blank">Play Africa Geography</a>
+                <a href="https://www.playgeography.com/games/countries-of-north-america/" target="blank">Play North America Geography</a>
+                <a href="https://www.playgeography.com/games/countries-of-south-america/" target="blank">Play south America Geography</a>
+                <a href="https://www.playgeography.com/games/countries-of-asia/" target="blank">Play Asia Geography</a>
                 <a href="https://www.playgeography.com/games/countries-of-europe/" target="blank">Play Europe
-                    Geography</a>
-                    <a href="https://www.playgeography.com/games/countries-of-north-america/" target="blank">Play America Geography</a>
-                </div>
+                    Geography</a>      
+            </div>
 
                 <div>
+                <a href="https://www.playgeography.com/games/countries-of-the-world/" target="blank">Play The World Geography</a>
+              
                     <a href="https://www.playgeography.com/games/provinces-and-territories-of-canada/" target="blank">Play
                         Canada Geography</a>
                 <a href="https://www.playgeography.com/games/us-states/" target="blank">Play the US Geography</a>
@@ -3236,12 +3239,13 @@ function showSlides(n) {
             <div>
                   <a href="https://www.codecademy.com/learn/learn-html" target="blank">Learn HTML</a>
                 <a href="https://learncssgrid.com/" target="blank">Learn CSS Grid</a>
+                <a href="https://www.codecademy.com/catalog/language/javascript" target="blank">Learn Javascript</a>
             </div>
 
              <div>
-                <a href="https://www.codecademy.com/catalog/language/javascript" target="blank">Learn Javascript</a>
-
+                <a href="https://www.codecademy.com/resources/docs/php" target="blank">Learn PHP</a>
                 <a href="https://www.codecademy.com/catalog/language/python" target="blank">Learn Python</a>
+                <a href="https://www.codecademy.com/learn/learn-c-plus-plus" target="blank">Learn C++</a>
             </div>
 
         </div>
